--- a/package.json
+++ b/package.json
@@ -14,21 +14,24 @@
   "private": true,
   "dependencies": {
     "@angular/common": "2.0.0-rc.1",
-    "@angular/compiler": "2.0.0-rc.1",
-    "@angular/core": "2.0.0-rc.1",
-    "@angular/platform-browser": "2.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
-    "@angular/router": "2.0.0-rc.1",
-    "es6-shim": "^0.35.0",
-    "reflect-metadata": "0.1.3",
-    "rxjs": "5.0.0-beta.6",
-    "systemjs": "0.19.26",
-    "zone.js": "^0.6.12"
+  "@angular/compiler": "2.0.0-rc.1",
+  "@angular/core": "2.0.0-rc.1",
+  "@angular/http": "2.0.0-rc.1",
+  "@angular/platform-browser": "2.0.0-rc.1",
+  "@angular/platform-browser-dynamic": "2.0.0-rc.1",
+  "@angular/router": "2.0.0-rc.1",
+  "@angular/router-deprecated": "2.0.0-rc.1",
+  "@angular/upgrade": "2.0.0-rc.1",
+  "reflect-metadata": "^0.1.3",
+  "rxjs": "5.0.0-beta.6",
+  "systemjs": "^0.19.27",
+  "zone.js": "^0.6.12"
   },
   "devDependencies": {
     "angular-cli": "0.0.*",
     "clang-format": "^1.0.35",
     "codelyzer": "0.0.14",
+    "awesome-typescript-loader": "^0.17.0",
     "ember-cli-inject-live-reload": "^1.4.0",
     "jasmine-core": "^2.4.1",
     "jasmine-spec-reporter": "^2.4.0",
@@ -40,5 +43,10 @@
     "tslint": "^3.6.0",
     "typescript": "^1.8.10",
     "typings": "^0.8.1"
+  },
+  "peerDependencies": {
+    "@angular/core": "^2.0.0-rc.1",
+    "@angular/http": "^2.0.0-rc.1",
+    "rxjs": "5.0.0-beta.6"
   }
 }
