--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "2.0.0-rc.1",
+  "@angular/common": "2.0.0-rc.1",
   "@angular/compiler": "2.0.0-rc.1",
   "@angular/core": "2.0.0-rc.1",
   "@angular/http": "2.0.0-rc.1",
@@ -23,6 +23,7 @@
   "@angular/router-deprecated": "2.0.0-rc.1",
   "@angular/upgrade": "2.0.0-rc.1",
   "reflect-metadata": "^0.1.3",
+  "es6-shim": "^0.35.0",
   "rxjs": "5.0.0-beta.6",
   "systemjs": "^0.19.27",
   "zone.js": "^0.6.12"
