--- a/package.json
+++ b/package.json
@@ -13,20 +13,21 @@
   },
   "private": true,
   "dependencies": {
-  "@angular/common": "2.0.0-rc.1",
-  "@angular/compiler": "2.0.0-rc.1",
-  "@angular/core": "2.0.0-rc.1",
-  "@angular/http": "2.0.0-rc.1",
-  "@angular/platform-browser": "2.0.0-rc.1",
-  "@angular/platform-browser-dynamic": "2.0.0-rc.1",
-  "@angular/router": "2.0.0-rc.1",
-  "@angular/router-deprecated": "2.0.0-rc.1",
-  "@angular/upgrade": "2.0.0-rc.1",
-  "reflect-metadata": "^0.1.3",
-  "es6-shim": "^0.35.0",
-  "rxjs": "5.0.0-beta.6",
-  "systemjs": "^0.19.27",
-  "zone.js": "^0.6.12"
+    "@angular/common": "2.0.0-rc.1",
+    "@angular/compiler": "2.0.0-rc.1",
+    "@angular/core": "2.0.0-rc.1",
+    "@angular/http": "2.0.0-rc.1",
+    "@angular/platform-browser": "2.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
+    "@angular/router": "2.0.0-rc.1",
+    "@angular/router-deprecated": "2.0.0-rc.1",
+    "@angular/upgrade": "2.0.0-rc.1",
+    "es6-shim": "^0.35.0",
+    "json-server": "^0.8.15",
+    "reflect-metadata": "^0.1.3",
+    "rxjs": "5.0.0-beta.6",
+    "systemjs": "^0.19.27",
+    "zone.js": "^0.6.12"
   },
   "devDependencies": {
     "angular-cli": "0.0.*",
